typescript/checker/tests/conformance/es6/for-ofStatements/for-of57.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            20,
        ),
        hi: BytePos(
            24,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of57.ts:2:5
  |
2 | var iter: Iterable<number>;
  |     ^^^^

